# orion-distributed

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
NEAR-Rewards/: Cargo.toml  README.md  pyproject.toml
NEAR-Rewards/auth/: auth.rs
NEAR-Rewards/src/: contract.rs  error.rs  lib.rs  node.rs  summary.rs  utils.rs
NEAR-Rewards/src/db/: db.rs  handlers.rs  models.rs
NEAR-Rewards/src/db/tests/: test_db.rs
NEAR-Rewards/tests/: test_integration.rs
pipeline-node/: consumer.py  loader.py  producer.py  transformer.py
pipeline-node/tests/: test_pipeline.py
schemas/: docker_logs.json  event_schema.json  mongo_db_logs.json  near_logs.json
